Adicionado aulas e pagina inicial

--- a/Aulas.html
+++ b/Aulas.html
@@ -9,9 +9,14 @@
         <a href="index.html">HOME</a>
         <a href="music.html">MUSICAS PARA PROGRAMAR</a>
         <a href="Aulas.html">AULAS</a>
-        <a href="contato.html">CONTATO </a>
+        <a href="contato.html">CONTATO </a> <br>
+        <br>
+        <br>
     
-
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/MyPTheKgh6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/zZj157ywgnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/x4S9rIJHqxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/DXmCU7v9glM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
 
 
 </body>
