--- a/index.html
+++ b/index.html
@@ -5,14 +5,39 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <img src="Img/Prof.png" width="600"><br>
+    </header>
+    <nav>
         <a href="index.html">HOME</a>
         <a href="music.html">MUSICAS PARA PROGRAMAR</a>
         <a href="Aulas.html">AULAS</a>
-        <a href="contato.html">CONTATO </a>
+        <a href="contato.html">CONTATO </a><br>
+        <br>
+    </nav>
+    <main>
+        <figure>
+            <img src="Img/download.png">
+                <figcaption>Aulas sobre C# </figcaption>
+        </figure>
     
+        <figure>
+            <img src="Img/JavaCupLogo800x800.png" width="250">
+                <figcaption>Aulas sobre JavaScript</figcaption>
+        </figure>
+
+        <figure>
+            <img src="Img/Python.svg.png" width="250">
+                <figcaption>Aulas sobre Python </figcaption>
+        </figure>
+
+        <figure>
+            <img src="Img/r-lang.png" width="250">
+                <figcaption>Aulas sobre R </figcaption>
+        </figure>
 
 
-
+    
+    </main>
 </body>
 </html>
