--- a/music.html
+++ b/music.html
@@ -11,6 +11,127 @@
         <a href="Aulas.html">AULAS</a>
         <a href="contato.html">CONTATO </a>
     
+     </header>
+    <h1>Musicas para programar</h1>
+    <h3>Nirvana - Dumb </h3>
+    <audio src="musica/Dumb.mp3" controls="controls"></audio>
+    <br>
+    I'm not like them<br>
+But I can pretend<br>
+The sun is gone<br>
+But I have a light<br>
+<br>
+The day is done<br>
+But I'm having fun<br>
+I think I'm dumb<br>
+Maybe just happy<br>
+<br>
+Think I'm just happy<br>
+Think I'm just happy<br>
+Think I'm just happy<br>
+<br>
+My heart is broke<br>
+But I have some glue<br>
+Help me inhale<br>
+And mend it with you<br>
+
+We'll flow around<br>
+And hang out on clouds<br>
+Then we'll come down<br>
+And I have a hangover<br>
+
+Have a hangover<br>
+Have a hangover<br>
+Have a hangover<br>
+<br>
+Skin the sun, fall asleep<br>
+Wish away, the soul is cheap<br>
+Lesson learned, wish me luck<br>
+Soothe the burn, wake me up<br>
+<br>
+I'm not like them<br>
+But I can pretend<br>
+The sun is gone<br>
+But I have a light<br>
+<br>
+The day is done<br>
+But I'm having fun<br>
+I think I'm dumb<br>
+Maybe just happy<br>
+<br>
+Think I'm just happy<br>
+Think I'm just happy<br>
+Think I'm just happy<br>
+<br>
+I think I'm dumb<br>
+I think I'm dumb<br>
+I think I'm dumb<br>
+I think I'm dumb<br>
+<h3>Nirvana - About a Girl </h3>
+<audio src="musica/About.mp3" controls="controls"></audio>
+<br>
+I need an easy friend<br>
+I do, with an ear to lend<br>
+I do think you fit this shoe<br>
+I do, but you have a clue<br>
+I'll take advantage while<br>
+You hang me out to dry<br>
+But I can't see you every night<br>
+<br>
+Free (I do, I do)
+I'm standing in your line<br>
+I do hope you have the time<br>
+I do pick a number too<br>
+I do keep a date with you<br>
+I'll take advantage while<br>
+You hang me out to dry<br>
+But I can't see you every night<br>
+<br>
+Free
+I need an easy friend<br>
+I do, with an ear to lend<br>
+I do think you fit this shoe<br>
+I do, but you have a clue<br>
+I'll take advantage while<br>
+You hang me out to dry<br>
+<br>
+But I can't see you every night<br>
+No, I can't see you every night<br>
+Free<br>
+I do<br>
+I do<br>
+I do<br>
+I do<br>
+<h3>Nirvana - Floyd the Barber </h3>
+<audio src="musica/Floyd.mp3" controls="controls"></audio>
+<br>
+Bell on door clanks, come on in<br>
+Floyd observes my hairy chin<br>
+Sit down, chair, don't be afraid<br>
+Steamed hot towel on my face<br>
+<br>
+I'm ashamed<br>
+I'm ashamed<br>
+I'm ashamed<br>
+<br>
+Barney ties me to the chair<br>
+I can't see, I'm really scared<br>
+Floyd breathes hard, I hear a zip<br>
+Pee pee pressed against my lips<br>
+<br>
+I'm ashamed<br>
+I'm ashamed<br>
+I'm ashamed<br>
+<br>
+I sense others in the room<br>
+Opie, Aunt Bea, I presume<br>
+They take turns and cut me up<br>
+I died smothered in Andy's clutch<br>
+<br>
+I'm ashamed<br>
+I'm ashamed<br>
+I'm ashamed<br>
+    
 
 
 
